--- a/index.html
+++ b/index.html
@@ -24,5 +24,11 @@
         <a href="#">Contact</a>
       </nav>
     </header>
+    <script
+      src="https://code.jquery.com/jquery-3.6.0.min.js"
+      integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+      crossorigin="anonymous"
+    ></script>
+    <script src="scripts/main.js"></script>
   </body>
 </html>
