Defined colour variables, implemented BEM methodology for the header and started to write basic header styles with Sass nesting

--- a/index.html
+++ b/index.html
@@ -17,11 +17,14 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <header>
-      <nav>
-        <a href="#">Portfolio</a>
-        <a href="#">About</a>
-        <a href="#">Contact</a>
+    <header class="header">
+      <div class="header__logo-box">
+        <img src="/img/john-stanley-logo.svg" class="header__logo" />
+      </div>
+      <nav class="header__nav">
+        <a class="header__a" href="#">Portfolio</a>
+        <a class="header__a" href="#">About</a>
+        <a class="header__a" href="#">Contact</a>
       </nav>
     </header>
     <script
