added favicon, more global resets and more header styles

--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/style.css" />
+    <link
+      rel="shortcut icon"
+      type="image/svg"
+      href="./img/john-stanley-portfolio-favicon.svg"
+    />
   </head>
   <body>
     <header class="header">
@@ -22,11 +27,12 @@
         <img src="/img/john-stanley-logo.svg" class="header__logo" />
       </div>
       <nav class="header__nav">
-        <a class="header__a" href="#">Portfolio</a>
+        <a class="header__a" href="#" data-selected="selected">Portfolio</a>
         <a class="header__a" href="#">About</a>
         <a class="header__a" href="#">Contact</a>
       </nav>
     </header>
+
     <script
       src="https://code.jquery.com/jquery-3.6.0.min.js"
       integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
