started styling the hero section, implemented the heading animation and added the hero image

--- a/index.html
+++ b/index.html
@@ -32,7 +32,32 @@
         <a class="header__a" href="#">Contact</a>
       </nav>
     </header>
-
+    <section class="hero">
+      <div class="hero__container">
+        <div class="hero__left">
+          <h1 class="hero__title">
+            johnStanley<span class="white">(</span
+            ><span class="blue-thin">myPortfolio</span
+            ><span class="white">){</span>
+          </h1>
+          <p class="hero__text">
+            Hello, World! I’m John, a
+            <a href="https://northcoders.com/" target="blank" class="hero__link"
+              >Northcoders</a
+            >
+            graduate and freelance web designer and developer based in Leeds. I
+            love design and front end development and I’m currently looking for
+            my first role in the industry.
+          </p>
+          <h1 class="hero__title white">};</h1>
+          <div class="hero__button-box"></div>
+        </div>
+        <img
+          src="./img/john-stanley-hero-portrait-graphic.png"
+          class="hero__img"
+        />
+      </div>
+    </section>
     <script
       src="https://code.jquery.com/jquery-3.6.0.min.js"
       integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
