added button styles

--- a/index.html
+++ b/index.html
@@ -42,7 +42,11 @@
           </h1>
           <p class="hero__text">
             Hello, World! I’m John, a
-            <a href="https://northcoders.com/" target="blank" class="hero__link"
+            <a
+              href="https://northcoders.com/"
+              target="blank"
+              rel="nofollow"
+              class="hero__link"
               >Northcoders</a
             >
             graduate and freelance web designer and developer based in Leeds. I
@@ -50,7 +54,10 @@
             my first role in the industry.
           </p>
           <h1 class="hero__title white">};</h1>
-          <div class="hero__button-box"></div>
+          <div class="hero__button-box">
+            <button class="btn btn--blue">View CV</button>
+            <button class="btn btn--ghost-blue">Say Hi</button>
+          </div>
         </div>
         <img
           src="./img/john-stanley-hero-portrait-graphic.png"
