added main layout section and started styling portfolio grid

--- a/index.html
+++ b/index.html
@@ -59,10 +59,81 @@
             <button class="btn btn--ghost-blue">Say Hi</button>
           </div>
         </div>
+
         <img
           src="./img/john-stanley-hero-portrait-graphic.png"
           class="hero__img"
         />
+      </div>
+    </section>
+    <section class="section">
+      <div class="section__background">
+        <div class="section__container">
+          <div class="section-title">
+            <h2 class="section-title__heading">.my-work</h2>
+            <img
+              src="./img/equality-operator-graphic.svg"
+              class="section-title__img"
+            />
+          </div>
+          <div class="my-work">
+            <p class="my-work__text">
+              View a selection of my work below consisting of personal portfolio
+              pieces and real client work.
+            </p>
+          </div>
+
+          <div class="portfolio">
+            <div class="portfolio-item portfolio-item--1">
+              <p class="portfolio-item__label">PERSONAL PROJECT</p>
+              <h3 class="portfolio-item__title">This Site!</h3>
+              <h3 class="portfolio-item__sub-title">
+                HTML | SASS | JQUERY | FIGMA | PHOTOSHOP NETLIFLY
+              </h3>
+              <p class="portfolio-item__description">
+                This portfolio site, designed in Figma and coded from scratch
+                with HTML, CSS, SASS & jQuery in VS Code. Version control
+                managed with Git & Github and deployed with Netlifly.
+              </p>
+              <div class="portfolio-item__button-box">
+                <button class="btn btn--black btn--small">Figma</button>
+                <button class="btn btn--yellow btn--small">Github</button>
+              </div>
+            </div>
+            <div class="portfolio-item portfolio-item--2">
+              <p class="portfolio-item__label">PERSONAL PROJECT</p>
+              <h3 class="portfolio-item__title">This Site!</h3>
+              <h3 class="portfolio-item__sub-title">
+                HTML | SASS | JQUERY | FIGMA | PHOTOSHOP NETLIFLY
+              </h3>
+              <p class="portfolio-item__description">
+                This portfolio site, designed in Figma and coded from scratch
+                with HTML, CSS, SASS & jQuery in VS Code. Version control
+                managed with Git & Github and deployed with Netlifly.
+              </p>
+              <div class="portfolio-item__button-box">
+                <button class="btn btn--black btn--small">Figma</button>
+                <button class="btn btn--yellow btn--small">Github</button>
+              </div>
+            </div>
+            <div class="portfolio-item portfolio-item--3">
+              <p class="portfolio-item__label">PERSONAL PROJECT</p>
+              <h3 class="portfolio-item__title">This Site!</h3>
+              <h3 class="portfolio-item__sub-title">
+                HTML | SASS | JQUERY | FIGMA | PHOTOSHOP NETLIFLY
+              </h3>
+              <p class="portfolio-item__description">
+                This portfolio site, designed in Figma and coded from scratch
+                with HTML, CSS, SASS & jQuery in VS Code. Version control
+                managed with Git & Github and deployed with Netlifly.
+              </p>
+              <div class="portfolio-item__button-box">
+                <button class="btn btn--black btn--small">Figma</button>
+                <button class="btn btn--yellow btn--small">Github</button>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
     <script
