continued to style portfolio grid

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
               class="hero__link"
               >Northcoders</a
             >
-            graduate and freelance web designer and developer based in Leeds. I
+            graduate based in Leeds with a variety of other digital skills. I
             love design and front end development and I’m currently looking for
             my first role in the industry.
           </p>
@@ -84,52 +84,78 @@
           </div>
 
           <div class="portfolio">
-            <div class="portfolio-item portfolio-item--1">
-              <p class="portfolio-item__label">PERSONAL PROJECT</p>
-              <h3 class="portfolio-item__title">This Site!</h3>
-              <h3 class="portfolio-item__sub-title">
-                HTML | SASS | JQUERY | FIGMA | PHOTOSHOP NETLIFLY
-              </h3>
-              <p class="portfolio-item__description">
-                This portfolio site, designed in Figma and coded from scratch
-                with HTML, CSS, SASS & jQuery in VS Code. Version control
-                managed with Git & Github and deployed with Netlifly.
-              </p>
-              <div class="portfolio-item__button-box">
-                <button class="btn btn--black btn--small">Figma</button>
-                <button class="btn btn--yellow btn--small">Github</button>
+            <div class="portfolio-item__outer">
+              <div class="portfolio-item__image-box">
+                <img
+                  src="./img/john-stanley-portfolio-site-image.jpg"
+                  class="portfolio-item__image"
+                />
+              </div>
+              <div class="portfolio-item portfolio-item--1">
+                <p class="portfolio-item__label">PERSONAL PROJECT</p>
+                <h3 class="portfolio-item__title">This Site!</h3>
+                <p class="portfolio-item__sub-title">
+                  HTML | SASS | JQUERY | FIGMA | PHOTOSHOP NETLIFLY
+                </p>
+                <p class="portfolio-item__description">
+                  This portfolio site, designed in Figma and coded from scratch
+                  with HTML, CSS, SASS & jQuery in VS Code. Version control
+                  managed with Git & Github and deployed with Netlifly.
+                </p>
+                <div class="portfolio-item__button-box">
+                  <button class="btn btn--black btn--small">Figma</button>
+                  <button class="btn btn--yellow btn--small">Github</button>
+                </div>
               </div>
             </div>
-            <div class="portfolio-item portfolio-item--2">
-              <p class="portfolio-item__label">PERSONAL PROJECT</p>
-              <h3 class="portfolio-item__title">This Site!</h3>
-              <h3 class="portfolio-item__sub-title">
-                HTML | SASS | JQUERY | FIGMA | PHOTOSHOP NETLIFLY
-              </h3>
-              <p class="portfolio-item__description">
-                This portfolio site, designed in Figma and coded from scratch
-                with HTML, CSS, SASS & jQuery in VS Code. Version control
-                managed with Git & Github and deployed with Netlifly.
-              </p>
-              <div class="portfolio-item__button-box">
-                <button class="btn btn--black btn--small">Figma</button>
-                <button class="btn btn--yellow btn--small">Github</button>
+
+            <div class="portfolio-item__outer">
+              <div class="portfolio-item__image-box">
+                <img
+                  src="./img/john-stanley-portfolio-site-image.jpg"
+                  class="portfolio-item__image"
+                />
+              </div>
+              <div class="portfolio-item portfolio-item--1">
+                <p class="portfolio-item__label">PERSONAL PROJECT</p>
+                <h3 class="portfolio-item__title">This Site!</h3>
+                <p class="portfolio-item__sub-title">
+                  HTML | SASS | JQUERY | FIGMA | PHOTOSHOP NETLIFLY
+                </p>
+                <p class="portfolio-item__description">
+                  This portfolio site, designed in Figma and coded from scratch
+                  with HTML, CSS, SASS & jQuery in VS Code. Version control
+                  managed with Git & Github and deployed with Netlifly.
+                </p>
+                <div class="portfolio-item__button-box">
+                  <button class="btn btn--black btn--small">Figma</button>
+                  <button class="btn btn--yellow btn--small">Github</button>
+                </div>
               </div>
             </div>
-            <div class="portfolio-item portfolio-item--3">
-              <p class="portfolio-item__label">PERSONAL PROJECT</p>
-              <h3 class="portfolio-item__title">This Site!</h3>
-              <h3 class="portfolio-item__sub-title">
-                HTML | SASS | JQUERY | FIGMA | PHOTOSHOP NETLIFLY
-              </h3>
-              <p class="portfolio-item__description">
-                This portfolio site, designed in Figma and coded from scratch
-                with HTML, CSS, SASS & jQuery in VS Code. Version control
-                managed with Git & Github and deployed with Netlifly.
-              </p>
-              <div class="portfolio-item__button-box">
-                <button class="btn btn--black btn--small">Figma</button>
-                <button class="btn btn--yellow btn--small">Github</button>
+
+            <div class="portfolio-item__outer">
+              <div class="portfolio-item__image-box">
+                <img
+                  src="./img/john-stanley-portfolio-site-image.jpg"
+                  class="portfolio-item__image"
+                />
+              </div>
+              <div class="portfolio-item portfolio-item--1">
+                <p class="portfolio-item__label">PERSONAL PROJECT</p>
+                <h3 class="portfolio-item__title">This Site!</h3>
+                <p class="portfolio-item__sub-title">
+                  HTML | SASS | JQUERY | FIGMA | PHOTOSHOP NETLIFLY
+                </p>
+                <p class="portfolio-item__description">
+                  This portfolio site, designed in Figma and coded from scratch
+                  with HTML, CSS, SASS & jQuery in VS Code. Version control
+                  managed with Git & Github and deployed with Netlifly.
+                </p>
+                <div class="portfolio-item__button-box">
+                  <button class="btn btn--black btn--small">Figma</button>
+                  <button class="btn btn--yellow btn--small">Github</button>
+                </div>
               </div>
             </div>
           </div>
