--- a/index.html
+++ b/index.html
@@ -162,6 +162,22 @@
         </div>
       </div>
     </section>
+    <footer class="footer">
+      <section class="footer__container">
+        <p class="footer__copyright">
+          &copy; Copyright
+          <script>
+            document.write(new Date().getFullYear());
+          </script>
+          - John Stanley
+        </p>
+        <div class="footer__logo-box">
+          <img src="./img/github-logo.svg" class="github-logo" />
+          <img src="./img/linkedin-logo.svg" class="linkedin-logo" />
+        </div>
+        <p class="footer__contact">Get in touch</p>
+      </section>
+    </footer>
     <script
       src="https://code.jquery.com/jquery-3.6.0.min.js"
       integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
