added about and contact pages and made footer stay at the bottom

--- a/index.html
+++ b/index.html
@@ -24,12 +24,16 @@
   <body>
     <header class="header">
       <div class="header__logo-box">
-        <img src="/img/john-stanley-logo.svg" class="header__logo" />
+        <a href="./index.html" class="header__link">
+          <img src="/img/john-stanley-logo.svg" class="header__logo" />
+        </a>
       </div>
       <nav class="header__nav">
-        <a class="header__a" href="#" data-selected="selected">Portfolio</a>
-        <a class="header__a" href="#">About</a>
-        <a class="header__a" href="#">Contact</a>
+        <a class="header__a" href="./index.html" data-selected="selected"
+          >Portfolio</a
+        >
+        <a class="header__a" href="./about.html">About</a>
+        <a class="header__a" href="./contact.html">Contact</a>
       </nav>
     </header>
     <section class="hero">
