experimenting with flexbox layout for the about page

--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
       </nav>
     </header>
 
-    <section class="section">
+    <main class="section">
       <section class="section__background">
         <section class="section__container">
           <div class="section-title">
@@ -47,9 +47,20 @@
               class="section-title__img"
             />
           </div>
+          <main class="about">
+            <div class="about__row">
+              <div class="about__double-column">
+                <p class="about-item__title">Item 1</p>
+              </div>
+
+              <div class="about__column">
+                <p class="about-item__title">Item 2</p>
+              </div>
+            </div>
+          </main>
         </section>
       </section>
-    </section>
+    </main>
 
     <footer class="footer">
       <section class="footer__container">
