--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
               class="hero__link"
               >Northcoders</a
             >
-            graduate based in Leeds with a variety of other digital skills. I
-            love design and front end development and I’m currently looking for
-            my first role in the industry.
+            graduate based in Leeds with a variety of digital skills. I love
+            design and front end development and I’m currently looking for my
+            first role in the industry.
           </p>
           <h1 class="hero__title white">};</h1>
           <div class="hero__button-box">
@@ -99,12 +99,13 @@
                 <p class="portfolio-item__label">PERSONAL PROJECT</p>
                 <h3 class="portfolio-item__title">This Site!</h3>
                 <p class="portfolio-item__sub-title">
-                  HTML | SASS | JQUERY | FIGMA | PHOTOSHOP NETLIFLY
+                  HTML | BEM | CUSTOM CSS & SASS | JQUERY | FIGMA | GULP |
+                  PHOTOSHOP | NETLIFLY
                 </p>
                 <p class="portfolio-item__description">
-                  This portfolio site, designed in Figma and coded from scratch
-                  with HTML, CSS, SASS & jQuery in VS Code. Version control
-                  managed with Git & Github and deployed with Netlifly.
+                  A static HTML site that I first designed in Figma then
+                  translated to code with HTML, CSS, SASS & jQuery. I managed
+                  version control with Git & Github and deployed with Netlifly.
                 </p>
                 <div class="portfolio-item__button-box">
                   <button class="btn btn--black btn--small">Figma</button>
