added photo block styles and transition on about page

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         />
       </div>
     </section>
-    <section class="section">
+    <main class="section">
       <div class="section__background">
         <div class="section__container">
           <div class="section-title">
@@ -166,7 +166,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </main>
     <footer class="footer">
       <section class="footer__container">
         <p class="footer__copyright">
