--- a/about.html
+++ b/about.html
@@ -47,17 +47,40 @@
               class="section-title__img"
             />
           </div>
-          <main class="about">
+          <section class="about">
             <div class="about__row">
-              <div class="about__double-column">
-                <p class="about-item__title">Item 1</p>
+              <div class="about__column">
+                <div class="image-block">
+                  <img
+                    src="./img/john-with-his-family.jpg"
+                    class="image-block__img"
+                  />
+                  <div class="image-block__background"></div>
+                </div>
               </div>
 
-              <div class="about__column">
-                <p class="about-item__title">Item 2</p>
+              <div class="about__double-column">
+                <h3 class="about-item__title">The journey so far</h3>
+                <p class="about-item__text">
+                  Hi, I’m John, and here I am with my wife Fay and daughter,
+                  Harper. I’m from London originally, but now reside in the
+                  leafy suburb of Oakwood in Leeds. My journey to becoming a
+                  professional web developer has been quite a long one. I would
+                  say I started to learn to code properly in December 2020, but
+                  in the previous five years to that I setup and ran the website
+                  for my travel business on Wordpress using no code solutions
+                  such as page builders and plugins. Over that time I worked
+                  with an agency to optimise the SEO, implementing some of the
+                  onsite work myself. It also gave me experience of SEO, link
+                  building and content marketing and we managed to rank on page
+                  one for certain targeted keywords. In 2021 I completed the
+                  Northcoders bootcamp and after a short break due to
+                  unfortunate circumstances I am now finally looking for my
+                  first position as a junior front end developer.
+                </p>
               </div>
             </div>
-          </main>
+          </section>
         </section>
       </section>
     </main>
