--- a/about.html
+++ b/about.html
@@ -60,23 +60,93 @@
               </div>
 
               <div class="about__double-column">
-                <h3 class="about-item__title">The journey so far</h3>
+                <h3 class="about-item__title">My journey so far</h3>
                 <p class="about-item__text">
                   Hi, I’m John, and here I am with my wife Fay and daughter,
                   Harper. I’m from London originally, but now reside in the
                   leafy suburb of Oakwood in Leeds. My journey to becoming a
-                  professional web developer has been quite a long one. I would
-                  say I started to learn to code properly in December 2020, but
-                  in the previous five years to that I setup and ran the website
-                  for my travel business on Wordpress using no code solutions
-                  such as page builders and plugins. Over that time I worked
-                  with an agency to optimise the SEO, implementing some of the
-                  onsite work myself. It also gave me experience of SEO, link
-                  building and content marketing and we managed to rank on page
-                  one for certain targeted keywords. In 2021 I completed the
-                  Northcoders bootcamp and after a short break due to
-                  unfortunate circumstances I am now finally looking for my
-                  first position as a junior front end developer.
+                  professional web developer has been quite a long one. I
+                  started to learn to code properly in December 2020, but in the
+                  previous five years to that I setup and ran the website for my
+                  travel business on Wordpress using no code solutions such as
+                  page builders and plugins. I also learned a lot about SEO,
+                  PPC, site speed and digital marketing, implementing many of
+                  the onsite SEO optimisations myself. I worked with an agency
+                  who provided content marketing and link building and we
+                  managed to rank on page one for certain targeted keywords. In
+                  2021 I completed the Northcoders bootcamp and I’m now looking
+                  for my first full time position as a junior front end
+                  developer.
+                </p>
+              </div>
+            </div>
+
+            <div class="about__row about__row--alternate">
+              <div class="about__double-column">
+                <h3 class="about-item__title">
+                  My interests as a junior developer
+                </h3>
+                <p class="about-item__text">
+                  I love visual design and have particularly enjoyed learning
+                  CSS and the challenge of translating designs into code. For
+                  this portfolio site I used Sass for the first time alongside
+                  the BEM naming methodology and I’d love to build on these
+                  skills. I also want to take a deeper dive into CSS frameworks
+                  such as Material UI and Tailwind. I am really interested in
+                  the JAMStack approach and the idea of headless architecture.
+                  I’d love to learn more about implementing headless CMS and
+                  headless ecommerce. So far I have been using create-react-app
+                  but I would like to build on this by learning Gatsby and
+                  NextJS. I’d also love to have some exposure to Vue to see how
+                  it compares to React.
+                </p>
+              </div>
+
+              <div class="about__column about__column--alternate">
+                <div class="image-block image_block--alternate">
+                  <img
+                    src="./img/john-stanley-leeds.jpg"
+                    class="image-block__img image-block__img--alternate"
+                  />
+                  <div
+                    class="
+                      image-block__background image-block__background--alternate
+                    "
+                  ></div>
+                </div>
+              </div>
+            </div>
+
+            <div class="about__row">
+              <div class="about__column">
+                <div class="image-block">
+                  <img
+                    src="./img/john-and-fay-in-torres-del-paine.jpg"
+                    class="image-block__img"
+                  />
+                  <div
+                    class="
+                      image-block__background image-block__background--yellow
+                    "
+                  ></div>
+                </div>
+              </div>
+
+              <div class="about__double-column">
+                <h3 class="about-item__title">
+                  Some other random facts about me!
+                </h3>
+                <p class="about-item__text">
+                  I’m a trained barista and love a great coffee as well as food
+                  and drink in general! My chef heroes are Anthony Bourdain,
+                  Rick Stein and Keith Floyd.<br />
+                  <br />
+                  I lived in Granada, Spain for six months and have a real
+                  passion and appreciation for Spanish food and culture. I’ve
+                  also travelled all across Central & South America.<br /><br />
+                  I love real vinyl records and have a modest collection with
+                  everything from Neil Young to classic Brazilian 45’s and a lot
+                  of drum and bass among other electronic music.
                 </p>
               </div>
             </div>
