setup media query mixin and made font-size property responsive

--- a/index.html
+++ b/index.html
@@ -117,24 +117,32 @@
             <div class="portfolio-item__outer">
               <div class="portfolio-item__image-box">
                 <img
-                  src="./img/john-stanley-portfolio-site-image.jpg"
+                  src="./img/rabbit-hole-coffee-image.jpg"
                   class="portfolio-item__image"
                 />
               </div>
               <div class="portfolio-item portfolio-item--1">
-                <p class="portfolio-item__label">PERSONAL PROJECT</p>
+                <p class="portfolio-item__label">CLIENT WORK</p>
                 <h3 class="portfolio-item__title">This Site!</h3>
                 <p class="portfolio-item__sub-title">
-                  HTML | SASS | JQUERY | FIGMA | PHOTOSHOP NETLIFLY
+                  WORDPRESS | ELEMENTOR | WOOCOMMERCE | FIGMA | MAILCHIMP | SEO
                 </p>
                 <p class="portfolio-item__description">
-                  This portfolio site, designed in Figma and coded from scratch
-                  with HTML, CSS, SASS & jQuery in VS Code. Version control
-                  managed with Git & Github and deployed with Netlifly.
+                  An e-commerce website I built for a client. Designed without
+                  templates in Figma and implemented in Wordpress using
+                  Elementor, Woocommerce and some custom CSS. I hosted it, setup
+                  Mailchimp and basic onsite SEO.
                 </p>
                 <div class="portfolio-item__button-box">
                   <button class="btn btn--black btn--small">Figma</button>
-                  <button class="btn btn--yellow btn--small">Github</button>
+                  <a
+                    href="https://rabbitholecoffee.co.uk/"
+                    class="btn btn--yellow btn--small btn__link"
+                    target="blank"
+                    rel="nofollow"
+                  >
+                    Live Site
+                  </a>
                 </div>
               </div>
             </div>
@@ -177,8 +185,8 @@
           - John Stanley
         </p>
         <div class="footer__logo-box">
-          <img src="./img/github-logo.svg" class="github-logo" />
-          <img src="./img/linkedin-logo.svg" class="linkedin-logo" />
+          <img src="./img/github-logo.svg" class="footer__github-logo" />
+          <img src="./img/linkedin-logo.svg" class="footer__linkedin-logo" />
         </div>
         <p class="footer__contact">Get in touch</p>
       </section>
