added skills page and mobile menu styles

--- a/about.html
+++ b/about.html
@@ -30,6 +30,7 @@
       </div>
       <nav class="header__nav">
         <a class="header__a" href="./index.html">Portfolio</a>
+        <a class="header__a" href="./skills.html">Skills</a>
         <a class="header__a" href="./about.html" data-selected="selected"
           >About</a
         >
@@ -168,7 +169,7 @@
           <img src="./img/github-logo.svg" class="github-logo" />
           <img src="./img/linkedin-logo.svg" class="linkedin-logo" />
         </div>
-        <p class="footer__contact">Get in touch</p>
+        <a href="./contact.html" class="footer__contact">Get in touch</a>
       </section>
     </footer>
   </body>
