--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
     />
   </head>
   <body>
+    <a class="mobile-icon-container">
+      <img
+        src="./img/mobile-menu-icon-red.svg"
+        class="mobile-icon-container__icon"
+      />
+    </a>
     <header class="header">
       <div class="header__logo-box">
         <a href="./index.html" class="header__link">
@@ -32,6 +38,7 @@
         <a class="header__a" href="./index.html" data-selected="selected"
           >Portfolio</a
         >
+        <a class="header__a" href="./skills.html">Skills</a>
         <a class="header__a" href="./about.html">About</a>
         <a class="header__a" href="./contact.html">Contact</a>
       </nav>
@@ -188,7 +195,7 @@
           <img src="./img/github-logo.svg" class="footer__github-logo" />
           <img src="./img/linkedin-logo.svg" class="footer__linkedin-logo" />
         </div>
-        <p class="footer__contact">Get in touch</p>
+        <a href="./contact.html" class="footer__contact">Get in touch</a>
       </section>
     </footer>
     <script
