trying the image URL in og:image meta tag

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
     <meta property="og:url" content="https://johnstanley.dev/" />
     <meta
       property="og:image"
-      content="img/john-stanley-portfolio-open-graph-image.png"
+      content="https://johnstanley.dev/dist/img/john-stanley-portfolio-open-graph-image.png"
     />
     <meta name="twitter:card" content="summary_large_image" />
 
