--- a/src/index.html
+++ b/src/index.html
@@ -132,116 +132,127 @@
             </p>
           </div>
 
-          <div class="portfolio">
-            <div class="portfolio-item__outer">
-              <div class="portfolio-item__image-box">
-                <img
-                  src="./img/john-stanley-portfolio-card-image.jpg"
-                  class="portfolio-item__image"
-                />
-              </div>
-              <div class="portfolio-item portfolio-item--1">
-                <p class="portfolio-item__label">PERSONAL PROJECT</p>
-                <h3 class="portfolio-item__title">This Site!</h3>
-                <p class="portfolio-item__sub-title">
-                  HTML | BEM | SASS | JAVASCRIPT | FIGMA | GULP | PHOTOSHOP |
-                  NETLIFLY
-                </p>
-                <p class="portfolio-item__description">
-                  A static HTML site that I first designed in Figma then
-                  translated to code with HTML, SASS & JavaScript. I managed
-                  version control with Git & Github and deployed with Netlifly.
-                </p>
-                <div class="portfolio-item__button-box">
-                  <a
-                    href="https://www.figma.com/file/fSOkmBKS5VNfHbNFtXd1cJ/Portfolio-Site?node-id=3%3A23"
-                    target="blank"
-                    class="btn btn--black btn--small"
-                    >Figma</a
-                  >
-                  <a
-                    href="https://github.com/JuanBorracho/personal-portfolio-2022"
-                    target="blank"
-                    class="btn btn--yellow btn--small"
-                    >Github</a
-                  >
+          <div class="portfolio-container">
+            <ul class="filters">
+              <li class="filters__item all filter-selected">All</li>
+              <li class="filters__item react">React</li>
+              <li class="filters__item sass">SASS</li>
+              <li class="filters__item wordpress">Wordpress</li>
+            </ul>
+
+            <div class="portfolio">
+              <div class="portfolio-item__outer" data-filter="sass">
+                <div class="portfolio-item__image-box">
+                  <img
+                    src="./img/john-stanley-portfolio-card-image.jpg"
+                    class="portfolio-item__image"
+                  />
+                </div>
+                <div class="portfolio-item portfolio-item--1">
+                  <p class="portfolio-item__label">PERSONAL PROJECT</p>
+                  <h3 class="portfolio-item__title">This Site!</h3>
+                  <p class="portfolio-item__sub-title">
+                    HTML | BEM | SASS | JAVASCRIPT | FIGMA | GULP | PHOTOSHOP |
+                    NETLIFLY
+                  </p>
+                  <p class="portfolio-item__description">
+                    A static HTML site that I first designed in Figma then
+                    translated to code with HTML, SASS & JavaScript. I managed
+                    version control with Git & Github and deployed with
+                    Netlifly.
+                  </p>
+                  <div class="portfolio-item__button-box">
+                    <a
+                      href="https://www.figma.com/file/fSOkmBKS5VNfHbNFtXd1cJ/Portfolio-Site?node-id=3%3A23"
+                      target="blank"
+                      class="btn btn--black btn--small"
+                      >Figma</a
+                    >
+                    <a
+                      href="https://github.com/JuanBorracho/personal-portfolio-2022"
+                      target="blank"
+                      class="btn btn--yellow btn--small"
+                      >Github</a
+                    >
+                  </div>
                 </div>
               </div>
-            </div>
 
-            <div class="portfolio-item__outer">
-              <div class="portfolio-item__image-box">
-                <img
-                  src="./img/rabbit-hole-coffee-card.jpg"
-                  class="portfolio-item__image"
-                />
-              </div>
-              <div class="portfolio-item portfolio-item--1">
-                <p class="portfolio-item__label">CLIENT WORK</p>
-                <h3 class="portfolio-item__title">Rabbit Hole Coffee</h3>
-                <p class="portfolio-item__sub-title">
-                  WORDPRESS | ELEMENTOR | WOOCOMMERCE | FIGMA | MAILCHIMP | SEO
-                </p>
-                <p class="portfolio-item__description">
-                  An e-commerce website I built for a client. Designed without
-                  templates in Figma and implemented in Wordpress using
-                  Elementor, Woocommerce and some custom CSS. I hosted it, setup
-                  Mailchimp and basic onsite SEO.
-                </p>
-                <div class="portfolio-item__button-box">
-                  <a
-                    href="https://www.figma.com/file/kltx97lRT3G9r8ml7ucywC/rabbit-hole?node-id=0%3A1"
-                    target="blank"
-                    class="btn btn--black btn--small"
-                    >Figma</a
-                  >
-                  <a
-                    href="https://rabbitholecoffee.co.uk/"
-                    class="btn btn--yellow btn--small btn__link"
-                    target="blank"
-                    rel="nofollow"
-                  >
-                    Live Site
-                  </a>
+              <div class="portfolio-item__outer" data-filter="wordpress">
+                <div class="portfolio-item__image-box">
+                  <img
+                    src="./img/rabbit-hole-coffee-card.jpg"
+                    class="portfolio-item__image"
+                  />
+                </div>
+                <div class="portfolio-item portfolio-item--1">
+                  <p class="portfolio-item__label">CLIENT WORK</p>
+                  <h3 class="portfolio-item__title">Rabbit Hole Coffee</h3>
+                  <p class="portfolio-item__sub-title">
+                    WORDPRESS | ELEMENTOR | WOOCOMMERCE | FIGMA | MAILCHIMP |
+                    SEO
+                  </p>
+                  <p class="portfolio-item__description">
+                    An e-commerce website I built for a client. Designed without
+                    templates in Figma and implemented in Wordpress using
+                    Elementor, Woocommerce and some custom CSS. I hosted it,
+                    setup Mailchimp and basic onsite SEO.
+                  </p>
+                  <div class="portfolio-item__button-box">
+                    <a
+                      href="https://www.figma.com/file/kltx97lRT3G9r8ml7ucywC/rabbit-hole?node-id=0%3A1"
+                      target="blank"
+                      class="btn btn--black btn--small"
+                      >Figma</a
+                    >
+                    <a
+                      href="https://rabbitholecoffee.co.uk/"
+                      class="btn btn--yellow btn--small btn__link"
+                      target="blank"
+                      rel="nofollow"
+                    >
+                      Live Site
+                    </a>
+                  </div>
                 </div>
               </div>
-            </div>
 
-            <div class="portfolio-item__outer">
-              <div class="portfolio-item__image-box">
-                <img
-                  src="./img/things-to-do-today-card.jpg"
-                  class="portfolio-item__image"
-                />
-              </div>
-              <div class="portfolio-item portfolio-item--1">
-                <p class="portfolio-item__label">PERSONAL PROJECT</p>
-                <h3 class="portfolio-item__title">Things To Do Today</h3>
-                <p class="portfolio-item__sub-title">
-                  REACT | HTML | CSS | FIGMA | LOTTIE
-                </p>
-                <p class="portfolio-item__description">
-                  Why, you ask? Because is a junior developer portfolio really
-                  complete without a to-do list app!? I've added local storage,
-                  a lottie animation on completion, the ability to cross out
-                  items on double click/tap and the ability to edit existing
-                  list items.
-                </p>
-                <div class="portfolio-item__button-box">
-                  <a
-                    href="https://what-to-do-today.app/"
-                    target="blank"
-                    class="btn btn--black btn--small"
-                    >Live Site</a
-                  >
-                  <a
-                    href="https://github.com/JuanBorracho/things-to-do-today"
-                    class="btn btn--yellow btn--small btn__link"
-                    target="blank"
-                    rel="nofollow"
-                  >
-                    Github
-                  </a>
+              <div class="portfolio-item__outer" data-filter="react">
+                <div class="portfolio-item__image-box">
+                  <img
+                    src="./img/things-to-do-today-card.jpg"
+                    class="portfolio-item__image"
+                  />
+                </div>
+                <div class="portfolio-item portfolio-item--1">
+                  <p class="portfolio-item__label">PERSONAL PROJECT</p>
+                  <h3 class="portfolio-item__title">Things To Do Today</h3>
+                  <p class="portfolio-item__sub-title">
+                    REACT | HTML | CSS | FIGMA | LOTTIE
+                  </p>
+                  <p class="portfolio-item__description">
+                    Why, you ask? Because is a junior developer portfolio really
+                    complete without a to-do list app!? I've added local
+                    storage, a lottie animation on completion, the ability to
+                    cross out items on double click/tap and the ability to edit
+                    existing list items.
+                  </p>
+                  <div class="portfolio-item__button-box">
+                    <a
+                      href="https://what-to-do-today.app/"
+                      target="blank"
+                      class="btn btn--black btn--small"
+                      >Live Site</a
+                    >
+                    <a
+                      href="https://github.com/JuanBorracho/things-to-do-today"
+                      class="btn btn--yellow btn--small btn__link"
+                      target="blank"
+                      rel="nofollow"
+                    >
+                      Github
+                    </a>
+                  </div>
                 </div>
               </div>
             </div>
